k8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: notes-app

spec:
  selector:
    app: mysql

  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306

  type: ClusterIP
