k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-service
  namespace: notes-app

spec:
  selector:
    app: notes-app

  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
